<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings.SettingsActivity" android:background="@color/colorAppDark" android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:background="@drawable/toolbar_background"
            android:layout_weight="2"
    />
    <Switch
            android:text="@string/sound"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/soundSwitch" android:onClick="setSound"
            android:layout_weight="1" android:background="@drawable/theme_block" android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp"
            android:paddingStart="24dp" android:paddingEnd="24dp"/>
    <TextView
            android:text="@string/choose_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/textView" android:textColor="@color/colorAppDark"
            android:background="@drawable/theme_block" android:layout_weight="1" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:gravity="center" android:textAllCaps="true"/>
    <Button
            android:text="@string/ocean_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oceanBlueButton" android:layout_weight="4" android:onClick="setOceanBlueTheme"
            android:background="@drawable/ocean_blue_block" android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/sex_on_the_beach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sotbButton" android:layout_weight="4" android:onClick="setSexOnTheBeachTheme"
            android:background="@drawable/sob_block" android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/miami_sunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/miamiSunsetButton" android:layout_weight="4" android:onClick="setMiamiSunsetTheme"
            android:background="@drawable/sunset_block" android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/raspberry_daydream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/raspberryDaydreamButton" android:layout_weight="4" android:onClick="setRaspberryDaydreamTheme"
            android:background="@drawable/raspberry_daydream_block" android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"/>
</LinearLayout>